[package]
name = "bevy_editor_cam"
version = "0.5.0"
edition = "2021"
description = "A camera controller for editors and CAD."
license = "MIT OR Apache-2.0"
keywords = ["controller", "camera", "bevy", "CAD"]
repository = "https://github.com/aevyrie/bevy_editor_cam"
documentation = "https://docs.rs/crate/bevy_editor_cam/latest"
exclude = ["assets/"]

[features]
default = ["extension_anchor_indicator", "extension_independent_skybox"]
extension_anchor_indicator = ["bevy_gizmos"]
extension_independent_skybox = ["bevy_asset", "bevy_core_pipeline"]

[dependencies]
bevy_app = { version = "0.16.0-rc.3" }
bevy_color = { version = "0.16.0-rc.3" }
bevy_derive = { version = "0.16.0-rc.3" }
bevy_ecs = { version = "0.16.0-rc.3" }
bevy_image = { version = "0.16.0-rc.3" }
bevy_input = { version = "0.16.0-rc.3" }
bevy_log = { version = "0.16.0-rc.3" }
bevy_math = { version = "0.16.0-rc.3" }
bevy_picking = { version = "0.16.0-rc.3" }
bevy_platform_support = { version = "0.16.0-rc.3" }
bevy_reflect = { version = "0.16.0-rc.3" }
bevy_render = { version = "0.16.0-rc.3" }
bevy_time = { version = "0.16.0-rc.3" }
bevy_transform = { version = "0.16.0-rc.3" }
bevy_utils = { version = "0.16.0-rc.3" }
bevy_window = { version = "0.16.0-rc.3" }
# Optional
bevy_asset = { version = "0.16.0-rc.3", optional = true }
bevy_core_pipeline = { version = "0.16.0-rc.3", optional = true }
bevy_gizmos = { version = "0.16.0-rc.3", optional = true }

[dev-dependencies]
bevy_framepace = "0.18"
big_space = "0.8.0"
indoc = "2.0.5"
rand = "0.8"

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
branch = "release-0.16.0"
features = [
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "jpeg",
    "ktx2",
    "tonemapping_luts",
    "x11",
    "zstd",
]
# TODO: workaround for https://github.com/bevyengine/bevy/issues/16562
default-features = true
